<resources>
    <string name="app_name">TF2 Backpack Viewer</string>
    <string name="user_id">Enter user ID:\n – http://steamcommunity.com/id/XXX\n – http://steamcommunity.com/profiles/XXX\n – STEAM_X:X:XXXXXXXX\n – X:X:XXXXXXXX</string>
    <string name="powered_by_steam">Powered by Steam</string>
    <string name="steam_userid"></string>
    <string name="download_notice">Download Notice</string>
    <string name="gamescheme_downloadinfo">The app needs to download the files for all TF2 items.\n\nThe total download size is ~4 MB. It is recommended that you are on a wifi connection\n\nDo you want to download the files?</string>
    <string name="download_gamescheme_error_message">The download failed with the following error:</string>
    <string name="download_gamescheme_success_toast">TF2 files were downloaded successfully!</string>
    <string name="download_gamescheme_error_toast">Failed to download TF2 files: %1$s</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="select_backpack">Select Backpack</string>
    <string name="my_backpack">My Backpack</string>
    <string name="userid_backpack">User ID</string>
    <string name="friendlist">Friend List</string>
    <string name="loading">Loading…</string>
    <string name="loading_backpack_503">Loading…\nFailed to get data, trying again (%1$d)</string>
    <string name="friends">Friends</string>
    <string name="backack_private">Backpack is private</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="download_successful">Download Successful!</string>
    <string name="menu_sort_by_number">Sort by number</string>
    <string name="dialog_notice">Notice</string>
    <string name="message_unknown_item">A unknown item was found. This could be because of the game files being outdated.\n\nDo you want to update the game files now?</string>
    <string name="player_options">Player Options</string>
    <string name="view_backpack">View Backpack</string>
    <string name="view_steampage">View Steam Page</string>
    <string name="recent_news">Recent News</string>
    <string name="changelog">Changelog</string>
	<string name="changelog_text">• 2.2.1 – 2019–01–15:\n – Fixed not being able to download images correctly.\n – Lots of minor fixes and improvements.\n\n• 2.2.0 – 2018–10–09:\n – Fixed usage of deprecated Web Api.\n – Fixed searching for users not working.\n – Added so that backpack data can be cached locally.\n – Reworked Schema download to be less intrusive by downloading images when they are needed instead of directly.\n – Added large item image on item info dialog.\n\n• 2.1.2 – 2017–10–07:\n – Fixed crash when downloading images\n\n• 2.1.1 – 2014–02–24:\n – Minor fixes\n\n• 2.1.0 – 2013–12–07:\n – Removed ads\n – Fixed not reading strange scores correctly\n\n• 2.0.9 – 2013–10–19:\n – Fixed ads being too big\n\n• 2.0.8 – 2013–07–24:\n – Added full support for Team-Paint in backpack\n – Fixed not showing which items are equipped correctly\n\n• 2.0.7 – 2013–07–22:\n – Fixed duplicate attributes\n\n• 2.0.6 – 2013–06–18:\n – Fixed not showing info message when viewing unknown items\n\n• 2.0.5 – 2013–03–24:\n – Added support for strange parts\n\n• 2.0.4 – 2013–03–18:\n – Added ability to select which backpack page to go to in backpack viewer\n – Fixed backpack not remembering current page on orientation change\n – Fixed more FC situations\n\n• 2.0.3 – 2013–03–15:\n – Fixed FC when rotating backpack (again…)\n\n• 2.0.2 – 2013–03–14:\n – Fixed FC when rotating backpack\n – Better error feedback in backpack\n\n• 2.0.1 – 2013–03–14:\n – Fixed FC when trying to change user\n\n• 2.0 – 2013–03–13:\n – Improved interface for tablets\n – Improved downloading of TF2 files. It now uses a notification and provides more info on what\'s going on\n – Added support for higher resolution images (experimental)\n\n• 1.6.1 – 2012–11–04:\n – Changed color for Haunted items\n – Fixed friends-list not sorting properly\n\n• 1.6 – 2012–10–29:\n – Possible fix for FC when rotation device\n – Added support for new particle effects\n – Fixed not fully handling ungiven items\n\n• 1.5.9 – 2012–09–10:\n – Fixed FC when multitasking\n\n• 1.5.8 – 2012–08–20:\n – Fixed avatars not loading when searching\n\n• 1.5.7 – 2012–07–30:\n – Fixed FC in friends list\n – Fixed keyboard behaviour when entering user id\n\n• 1.5.6 – 2012–07–22:\n – Fixed FC when viewing friends list\n\n• 1.5.5 – 2012–06–07:\n – Added categories for items list\n\n• 1.5.4 – 2012–05–06:\n – Added craftable status to item info\n – Improved behaviour of username suggestion box\n\n• 1.5.3 – 2012–04–22:\n – Fixed friends-list not working\n\n• 1.5.2 – 2012–04–07:\n – Fixed FC when caching steam id\n – Fixed not fetching player name on \"Crafted by\" attribute\n – Fixed other small bugs as well\n\n• 1.5.1 – 2012–03–26:\n – Potential fix for FC when starting app\n\n• 1.5 – 2012–03–26:\n – Added steam avatars to friendslist\n\n• 1.4.9 – 2011–12–16:\n – Fixed FC when downloading game files\n\n• 1.4.8 – 2011–10–31:\n – Added support for haunted items\n – Added black background on equipped text\n – Hopefully fixed crashes when downloading gamefiles\n\n• 1.4.7 – 2011–09–29:\n – Added option to reset images when downloading TF2 gamefiles\n\n• 1.4.6 – 2011–09–09:\n – Fixed FC when viewing specific weapons in backpack\n – Fixed the \&quot;New\&quot; button disappearing on orientation change\n\n• 1.4.5 – 2011–09–04:\n – Updated strange quality items with the new color\n – Bugfixes\n\n• 1.4.4 – 2011–08–16:\n – Fixed FC with all items list\n\n• 1.4.3 – 2011–08–11:\n – Fixed a FC when downloading images\n – All items list is now using a lazy loader to make it less laggy\n\n• 1.4.2 – 2011–07–30:\n – Backpack view now scales to take up as much screen as possible\n – Removed \&quot;Unknown\&quot; rank for strange weapons since it isn\'t used\n\n• 1.4.1 – 2011–07–27:\n – Added info to community id tutorial on how to set steam profile to public\n – Fixed issue with dialogs\n\n• 1.4.0 – 2011–07–19:\n – Added landscape support to dashboard\n – Added support for new team paint cans\n – Added support for item craft order\n\n• 1.3.9 – 2011–07–17:\n – Fixed color issue with Team Spirit\n\n• 1.3.8 – 2011–07–02:\n – Added support for the \&quot;Strange\&quot; item quality\n\n• 1.3.7 – 2011–06–25:\n – Fixed various errors\n\n• 1.3.6 – 2011–05–28:\n – Fixed duplicate attributes\n – Item grid list is improved in landscape mode\n\n• 1.3.5 – 2011–05–21:\n – Added item descriptions\n\n• 1.3.4 – 2011–05–16:\n – Fixed paint and unusual effect\n\n• 1.3.3 – 2011–05–15:\n – Added all items list\n – Added function to see items that have dropped but not yet been found\n – Removed Golden Wrench list since it doesn\'t seem to work anymore\n – Updated to support api changes\n\n• 1.3.2 – 2011–05–07:\n – Because of a crash bug in admob, ads on 1.6 systems are temporarily removed until google fixes it\n\n• 1.3.1 – 2011–05–03:\n –Fixed FC on app install\n\n• 1.3 – 2011–05–02:\n – Added guide on how to set a steam community id\n\n • 1.2.9 – 2011–03–28:\n – Fixed some dialog issues\n – Fixed ad placement\n\n• 1.2.8 – 2011–03–03:\n – Added search function\n\n• 1.2.7 – 2011–02–16:\n – Added support for the \&quot;Genuine\&quot; item quality\n\n• 1.2.6 – 2011–01–21:\n – Added support for regular steam id\'s (STEAM_X:Y:Z)\n\n• 1.2.5 – 2011–01–19:\n – Now shows particle effect\n – Now colors the backpack cell according to item quality ( can be turned off in settings )\n\n• 1.2.2 – 2011–01–16:\n – Fixed paint can icons\n – Improved item list download speed\n\n• 1.2.1 – 2011–01–03:\n – Fixed custom descriptions showing as names\n\n• 1.2 – 2010–12–31:\n – Shows item descriptions ( no attributes yet )\n – Shows custom item names and descriptions\n – Now shows items painted with team spirit\n – Now shows equipped status\n – Now shows tradable status\n – Fixed backpack size issue on orientation change\n\n• 1.1.6 – 2010–12–20:\n – Added support for an unlimited number of backpack pages\n\n• 1.1.5 – 2010–12–18:\n – Added support for colored items\n – Added support for six backpack pages\n\n• 1.1.2 – 2010–11–16:\n – Fixed FC when trying to get user id\n\n• 1.1.1 – 2010–11–14:\n – Fixed a crash in friends–list if you had less then 10 friends\n\n• 1.1 – 2010–11–07:\n – News list improved\n – Player list uses slow adapter now to prevent lots of running threads\n – Better error handling\n\n• 1.0.5 – 2010–11–02:\n – Added better feedback on network errors\n – Backpack now remebers page number on orientation change\n\n• 1.0.1 – 2010–10–31:\n – Fixed FC on orientation change\n\n• 1.0 – 2010–10–29:\n – First release</string>
    <string name="newscount">News Count</string>
    <string name="newscount_info">Set how many news entries that will be downloaded</string>
    <string name="newscount_hint">Enter a number (1 – 99)</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="no_internet">Internet is not available!</string>
    <string name="no_steam_api">Steam API seems to be down. Try again later</string>
    <string name="alert_dialog_dont_show_again">Don\'t show again</string>
    <string name="not_tradable">( Not Tradable )</string>
    <string name="not_craftable">( Not Usable in Crafting )</string>
    <string name="not_tradable_craftable">( Not Tradable, Not Usable in Crafting )</string>
    <string name="show_backpack_rarity">Show Backpack Rarity</string>
    <string name="backpack_rarity_on">The backpack cell will be colored with the item quality color</string>
    <string name="backpack_rarity_off">Backpack will be shown as normal</string>
    <string name="search_hint">Search the steam community</string>
    <string name="search_result">Search Result</string>
    <string name="search">Search</string>
    <string name="no_result">No Result</string>
    <string name="tutorial_how_to_set_community_id">To set a community id that can be used in this application you must first go to the steam communty website and login.\n\n1. Go to \&quot;Edit my profile\&quot;\n\n2. Go to where it says \&quot;Custom URL: http://steamcommunity.com/id/\&quot;\n\n3. Enter in the textbox the id you would like to use and then click save\n\nIf your backpack is private, do the following:\n\n1. Go to \&quot;Edit my profile\&quot;\n\n2. Click on the \&quot;Settings\&quot; tab\n\n3. Change your profile status to \&quot;Public\&quot; and click save</string>
    <string name="community_id">Community ID</string>
    <string name="failed_download">Failed to download data</string>
    <string name="new_ungiven_item">New!</string>
    <string name="hidelargecraftnumber_on">Numbers above 100 will not be shown – just like ingame</string>
    <string name="hidelargecraftnumber_off">Craft order number will always be shown if it exists</string>
    <string name="hide_large_craft_number">Hide large craft order</string>
    <string name="cache_cleared">Cache Cleared!</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_info">Clears all cache files the app has downloaded</string>
    <string name="reset_images">Redownload Images</string>
    <string name="equipped">Equipped</string>
    <string name="starting_download">Starting download…</string>
    <string name="downloading_schema">Downloading Item info…</string>
    <string name="menu_sort_by_persona_state">Sort by status</string>
    <string name="alert_dialog_clear_cache">Clear Cache</string>
    <string name="alert_dialog_clear_history">Clear History</string>
    <string name="whats_new">What\'s new!</string>
    <string name="download">Download</string>
    <string name="download_highres_images">Download High-res images (65MB!!!)</string>
    <string name="how_to_community_id">How to: Community ID</string>
    <string name="donate">Donate!</string>
    <string name="donate_description">If you like the app you can donate!</string>
</resources>