<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="User" >
        <PreferenceScreen android:title="Change User" >
            <intent android:action="com.minder.app.tf2backpack.SET_STEAMID" />
        </PreferenceScreen>

        <Preference
            android:key="communityId"
            android:summary="Explains how to set a community id"
            android:title="@string/how_to_community_id">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Backpack" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="backpackrarity"
            android:persistent="true"
            android:summaryOff="@string/backpack_rarity_off"
            android:summaryOn="@string/backpack_rarity_on"
            android:title="@string/show_backpack_rarity" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hidelargecraftnumber"
            android:persistent="true"
            android:summaryOff="@string/hidelargecraftnumber_off"
            android:summaryOn="@string/hidelargecraftnumber_on"
            android:title="@string/hide_large_craft_number" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Friends" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showavatars"
            android:persistent="true"
            android:summaryOff="Player avatars will not be displayed"
            android:summaryOn="Player avatars will be displayed"
            android:title="Show Avatars" />
    </PreferenceCategory>
    <PreferenceCategory android:title="News" >
        <EditTextPreference
            android:defaultValue="10"
            android:hint="@string/newscount_hint"
            android:inputType="number"
            android:key="newscount"
            android:maxLength="2"
            android:persistent="true"
            android:summary="@string/newscount_info"
            android:title="@string/newscount" >
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Advanced" >
        <Preference
            android:key="refreshfiles"
            android:summary="Will redownload the item list"
            android:title="Refresh TF2 Game Files"></Preference>
        <Preference
            android:key="clearcache"
            android:summary="Clears the file cache"
            android:title="Clear Cache" >
        </Preference>
        <Preference
            android:key="clearhistory"
            android:summary="Clear name history"
            android:title="Clear History" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About" >
        <PreferenceScreen
            android:summary="@string/whats_new"
            android:title="@string/changelog" >
            <Preference android:layout="@layout/changelog_list" />
        </PreferenceScreen>
        
        <Preference 
            android:key="donate"
            android:summary="@string/donate_description"
            android:title="@string/donate"/>

        <Preference
            android:key="aboutcreator"
            android:summary="by Patrik Minder"
            android:title="@string/app_name" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>