<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/ButtonMyBackpack"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_padding"
        android:layout_marginRight="@dimen/button_padding"
        android:width="@dimen/select_backpack_width"
        android:height="@dimen/select_backpack_height"
        android:text="@string/my_backpack"></Button>

    <Button
        android:id="@+id/ButtonUserId"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_padding"
        android:layout_marginRight="@dimen/button_padding"
        android:width="@dimen/select_backpack_width"
        android:height="@dimen/select_backpack_height"
        android:text="@string/userid_backpack"></Button>

    <Button
        android:id="@+id/ButtonCancel"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/button_padding"
        android:layout_marginRight="@dimen/button_padding"
        android:layout_marginTop="20dp"
        android:width="@dimen/select_backpack_width"
        android:height="@dimen/select_backpack_height"
        android:text="@string/alert_dialog_cancel"></Button>
</LinearLayout>
